Realizacion del header
Resolve: T#002

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,17 @@
-<h1>Portfolio Argentina Programa.</h1>
-<h2>Aqui comienza la aventura.</h2>
-<p>Este es el comienzo de la creacion del Portfolio de Pablo Javier Salvi.</p>
+<header>
+    <div class="container-fluid mt-4">
+        <div class="containerHeader">
+            <div class="containerHeader--images">
+                <img class="containerHeader--images_Fondo" src="./assets/images/fondo.jpg" alt="persona">
+                <img class="containerHeader--images_Persona" src="./assets/images/PJS.png" alt="persona">
+                <img class="containerHeader--images_lapiz lapiz" src="./assets/images/lapiz.png" alt="lapiz">
+            </div>
+            <div class="containerHeader--content">
+                <h1>Pablo J. Salvi</h1>
+                <h2>Tecnico en Informatica</h2>
+                <h3>Buenos Aires - Bahia Blanca</h3>
+                <button type="button" class="btn btn-primary">Añadir seccion</button>
+            </div>
+        </div>
+    </div>
+</header>
