Seccion informacion personal
Se genero el formato basico
no se cargo completamente

Resolve: T#003

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,9 @@
     <div class="container-fluid mt-4">
         <div class="containerHeader">
             <div class="containerHeader--images">
-                <img class="containerHeader--images_Fondo" src="./assets/images/fondo.jpg" alt="persona">
-                <img class="containerHeader--images_Persona" src="./assets/images/PJS.png" alt="persona">
-                <img class="containerHeader--images_lapiz lapiz" src="./assets/images/lapiz.png" alt="lapiz">
+                <img class="containerHeader--images_back" src="./assets/images/back.jpg" alt="persona">
+                <img class="containerHeader--images_person" src="./assets/images/pjs.png" alt="persona">
+                <img class="containerHeader--images_pencil pencil" src="./assets/images/pencil.png" alt="lapiz">
             </div>
             <div class="containerHeader--content">
                 <h1>Pablo J. Salvi</h1>
