Implementado JSON para datos
Resolve: T#004

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,9 +7,9 @@
                 <img class="containerHeader--images_pencil pencil" src="./assets/images/pencil.png" alt="lapiz">
             </div>
             <div class="containerHeader--content">
-                <h1>Pablo J. Salvi</h1>
-                <h2>Tecnico en Informatica</h2>
-                <h3>Buenos Aires - Bahia Blanca</h3>
+                <h1>{{dataPortfolio.name}}</h1>
+                <h2>{{dataPortfolio.profession}}</h2>
+                <h3>{{dataPortfolio.placeOfBirth}}</h3>
                 <button type="button" class="btn btn-primary">Añadir seccion</button>
             </div>
         </div>
