--- a/src/app/components/personal-information/personal-information.component.html
+++ b/src/app/components/personal-information/personal-information.component.html
@@ -8,28 +8,40 @@
             <div class="persInf--content">
                 <div class="persInf--content--item">
                     <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                    <p class="persInf--content--item_text">Estado civil: Casado.</p>
+                    <p class="persInf--content--item_text">Estado civil: {{dataPortfolio.personalInformation.estadoCivil}}.</p>
                 </div>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Nacionalidad: Argentino.</p>
+                <p class="persInf--content--item_text">Nacionalidad: {{dataPortfolio.personalInformation.nacionalidad}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Edad: 36.</p>
+                <p class="persInf--content--item_text">Edad: {{dataPortfolio.personalInformation.edad}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">DNI: 31.884.267.</p>
+                <p class="persInf--content--item_text">DNI: {{dataPortfolio.personalInformation.dni}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Domicilio: Iriart 448.</p>
+                <p class="persInf--content--item_text">Domicilio: {{dataPortfolio.personalInformation.domicilio}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Codigo Postal: 2804.</p>
+                <p class="persInf--content--item_text">Codigo Postal: {{dataPortfolio.personalInformation.codigoPostal}}.</p>
+            </div>
+            <div class="persInf--content--item">
+                <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
+                <p class="persInf--content--item_text">CUIL: {{dataPortfolio.personalInformation.cuil}}.</p>
+            </div>
+            <div class="persInf--content--item">
+                <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
+                <p class="persInf--content--item_text">Correo electronico: {{dataPortfolio.personalInformation.correo}}.</p>
+            </div>
+            <div class="persInf--content--item">
+                <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
+                <p class="persInf--content--item_text">Telefonos: {{dataPortfolio.personalInformation.telefonos}}.</p>
             </div>
         </div>
     </div>
