Reparacion de errores
Se realizo limpieza de codigo.

Resolve: R#002

--- a/src/app/components/personal-information/personal-information.component.html
+++ b/src/app/components/personal-information/personal-information.component.html
@@ -8,40 +8,40 @@
             <div class="persInf--content">
                 <div class="persInf--content--item">
                     <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                    <p class="persInf--content--item_text">Estado civil: {{dataPortfolio.personalInformation.estadoCivil}}.</p>
+                    <p class="persInf--content--item_text">Estado civil: {{dataPortfolio.estadoCivil}}.</p>
                 </div>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Nacionalidad: {{dataPortfolio.personalInformation.nacionalidad}}.</p>
+                <p class="persInf--content--item_text">Nacionalidad: {{dataPortfolio.nacionalidad}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Edad: {{dataPortfolio.personalInformation.edad}}.</p>
+                <p class="persInf--content--item_text">Edad: {{dataPortfolio.edad}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">DNI: {{dataPortfolio.personalInformation.dni}}.</p>
+                <p class="persInf--content--item_text">DNI: {{dataPortfolio.dni}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Domicilio: {{dataPortfolio.personalInformation.domicilio}}.</p>
+                <p class="persInf--content--item_text">Domicilio: {{dataPortfolio.domicilio}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Codigo Postal: {{dataPortfolio.personalInformation.codigoPostal}}.</p>
+                <p class="persInf--content--item_text">Codigo Postal: {{dataPortfolio.codigoPostal}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">CUIL: {{dataPortfolio.personalInformation.cuil}}.</p>
+                <p class="persInf--content--item_text">CUIL: {{dataPortfolio.cuil}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Correo electronico: {{dataPortfolio.personalInformation.correo}}.</p>
+                <p class="persInf--content--item_text">Correo electronico: {{dataPortfolio.correo}}.</p>
             </div>
             <div class="persInf--content--item">
                 <img class="persInf--content--item_num pencil" src="./assets/images/num.png" alt="lapiz">
-                <p class="persInf--content--item_text">Telefonos: {{dataPortfolio.personalInformation.telefonos}}.</p>
+                <p class="persInf--content--item_text">Telefonos: {{dataPortfolio.telefonos}}.</p>
             </div>
         </div>
     </div>
