--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,6 +2,7 @@
     height: 530px;
     border: 2px solid #cac3c3;
     border-radius: 2em;
+    position: relative;
 }
 
 .containerHeader--images {
@@ -22,9 +23,10 @@
     width: 140px;
     height: 150px;
     border-radius: 50%;
-    margin: 10em 0 0 4em;
+    margin: 0 0 13em 4em;
     position: absolute;
     left: 0;
+    bottom: 0;
     z-index: 10;
 }
 
